[package]
name = "bad_apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { version = "0.8.4", default-features = false, features = [
    "cpal",
    "ogg",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { git = "https://github.com/ImTheSquid/cacao.git" }
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies.lazy_static]
version = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.42.0"
features = [
    # core
    "Win32_Foundation",
    # window creation
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # commandline helper
    "Win32_System_Console",
    # IMAGE_DOS_HEADER
    "Win32_System_SystemServices",
    # IProgressDialog
    "Win32_UI_Shell",
    "Win32_System_Com",
    # GetCurrentThreadId
    "Win32_System_Threading",
    # GetModuleHandleA
    "Win32_System_LibraryLoader",
]

# used for hooking functions with more ease
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.42.0"
features = [
    # core
    "Win32_Foundation",
    # CreateWindowExA
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "badapple"
ProductName = ""
CompanyName = "https://github.com/mon"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
